Fixed spacing in control nav

--- a/client/stylus/app.book.styl
+++ b/client/stylus/app.book.styl
@@ -4,7 +4,6 @@
 #instruction-book
   abs()
   bottom                    15px
-  margin-top                -222px
   left                      -1609px
   size                      1509px, 425px
   z-index                   1000
@@ -69,6 +68,7 @@
         width               28px
         padding             0
         text-align          center
+        margin              0
         &:first-child
           border-top-right-radius          0
           border-bottom-right-radius       0
@@ -91,6 +91,7 @@
       padding             0 0.8em
       vendor              transition, color .1s linear
       font-weight         600
+      margin-left         15px
       &.dismiss-button
         position          absolute
         top               -45px
